--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <title>Rock, Paper, Scissors, Lizard, Spock</title>
 </head>
 <body>
+    <div id="title">
+        <H1>Game Name</H1>
+    </div>
+    <div id="options">
+
+    </div>
+    <div id="pictures">
+
+    </div>
+    <div id="result">
+
+    </div>
+    <div id="scores">
+
+    </div>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
