Set selection buttons for the user

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
         <H1>Game Name</H1>
     </div>
     <div id="options">
-
+        <button>Rock</button>
+        <button>Paper</button>
+        <button>Scissors</button>
+        <button>Lizard</button>
+        <button>Spock</button>
     </div>
     <div id="pictures">
 
