Set up general layout for remaing page

--- a/index.html
+++ b/index.html
@@ -19,13 +19,23 @@
         <button>Spock</button>
     </div>
     <div id="pictures">
-
+        <span id="image1">
+            <h2>image here</h2>
+        </span>
+        <span id="image2">
+            <h2>image here</h2>
+        </span>
     </div>
     <div id="result">
-
+        <h2>result</h2>
     </div>
     <div id="scores">
-
+        <span id="userscore">
+            <h2>userscore</h2>
+        </span>
+        <span id="computerscore">
+            <h2>computerscore</h2>
+        </span>
     </div>
     <script src="assets/js/script.js"></script>
 </body>
