--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet"> 
+    <script src="https://kit.fontawesome.com/47a129b140.js" crossorigin="anonymous"></script>
     <title>Rock, Paper, Scissors, Lizard, Spock</title>
 </head>
 <body>
     <div id="title">
-        <H1>Game Name</H1>
+        <H1>Rock, Paper, Scissors, Lizard, Spock!</H1>
     </div>
     <div id="options">
         <button>Rock</button>
