Changed Id's to classes as appropriate

--- a/index.html
+++ b/index.html
@@ -12,34 +12,34 @@
     <title>Rock, Paper, Scissors, Lizard, Spock</title>
 </head>
 <body>
-    <div id="title">
+    <div class="title">
         <H1>Rock, Paper, Scissors, Lizard, Spock!</H1>
     </div>
-    <div id="options">
+    <div class="options">
         <button>Rock</button>
         <button>Paper</button>
         <button>Scissors</button>
         <button>Lizard</button>
         <button>Spock</button>
     </div>
-    <div id="pictures">
-        <span id="image1">
+    <div class="pictures">
+        <span class="image1">
             <h2>image here</h2>
         </span>
-        <span id="image2">
+        <span class="image2">
             <h2>image here</h2>
         </span>
     </div>
-    <div id="result">
+    <div class="result">
         <h2>result</h2>
     </div>
-    <div id="scores">
-        <span id="userscore">
-            <h2>userscore</h2>
-        </span>
-        <span id="computerscore">
-            <h2>computerscore</h2>
-        </span>
+    <div class="scores">
+        <p class="userscore">
+            userscore
+        </p>
+        <p class="computerscore">
+            computerscore
+        </p>
     </div>
     <script src="assets/js/script.js"></script>
 </body>
