Added styling to score area

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     </div>
     <div class="scores">
         <p class="userscore">
-            userscore
+            userscore <span id="score">0</span>
         </p>
         <p class="computerscore">
-            computerscore
+            computerscore <span id="incorrect">0</span>
         </p>
     </div>
     <script src="assets/js/script.js"></script>
