Added styling to results area, and amended classes

--- a/index.html
+++ b/index.html
@@ -24,21 +24,21 @@
     </div>
     <div class="pictures">
         <span class="image1">
-            <h2>image here</h2>
+            <p>image here</p>
         </span>
         <span class="image2">
-            <h2>image here</h2>
+            <p>image here</p>
         </span>
     </div>
     <div class="result">
-        <h2>result</h2>
+        <p class="winner"></p>
     </div>
     <div class="scores">
         <p class="userscore">
-            userscore <span id="score">0</span>
+            Player's Score <span id="score">0</span>
         </p>
         <p class="computerscore">
-            computerscore <span id="incorrect">0</span>
+            Computer's Score <span id="incorrect">0</span>
         </p>
     </div>
     <script src="assets/js/script.js"></script>
