--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     </div>
     <div class="pictures">
         <span class="image1">
-            <p>image here</p>
+            <img src="assets/images/original.jpg" alt="Rock, Paper, Scissors, Lizard, Spock icon">
         </span>
         <span class="image2">
-            <p>image here</p>
+            <img src="assets/images/original.jpg" alt="Rock, Paper, Scissors, Lizard, Spock icon">
         </span>
     </div>
     <div class="result">
