--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <H1>Rock, Paper, Scissors, Lizard, Spock!</H1>
     </div>
     <div class="options">
-        <button>Rock</button>
-        <button>Paper</button>
-        <button>Scissors</button>
-        <button>Lizard</button>
-        <button>Spock</button>
+        <button class="rock">Rock</button>
+        <button class="paper">Paper</button>
+        <button class="scissors">Scissors</button>
+        <button class="lizard">Lizard</button>
+        <button class="spock">Spock</button>
     </div>
     <div class="pictures">
         <span class="image1">
