Coding functions for game to work

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <H1>Rock, Paper, Scissors, Lizard, Spock!</H1>
     </div>
     <div class="options">
-        <button class="rock">Rock</button>
-        <button class="paper">Paper</button>
-        <button class="scissors">Scissors</button>
-        <button class="lizard">Lizard</button>
-        <button class="spock">Spock</button>
+        <button id="r">Rock</button>
+        <button id="p">Paper</button>
+        <button id="s">Scissors</button>
+        <button id="l">Lizard</button>
+        <button id="k">Spock</button>
     </div>
     <div class="pictures">
         <span class="image1">
@@ -31,7 +31,7 @@
         </span>
     </div>
     <div class="result">
-        <p class="winner"></p>
+        <p>Make your choice!</p>
     </div>
     <div class="scores">
         <p class="userscore">
@@ -41,6 +41,6 @@
             Computer's Score <span id="incorrect">0</span>
         </p>
     </div>
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/script2.js"></script>
 </body>
 </html>
