setting image to change to correct image depending on users selection

--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
             Computer's Score <span id="incorrect">0</span>
         </p>
     </div>
-    <script src="assets/js/script2.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
