added new function to change player image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="pictures">
         <span class="image1">
-            <img class="playerimage" src="assets/images/original.jpg" alt="Rock, Paper, Scissors, Lizard, Spock icon">
+            <img id="playerimage" src="assets/images/original.jpg" alt="Rock, Paper, Scissors, Lizard, Spock icon">
         </span>
         <span class="image2">
             <img class="computerimage" src="assets/images/original.jpg" alt="Rock, Paper, Scissors, Lizard, Spock icon">
