Scripted for computer choice to display relevant image

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <img id="playerimage" src="assets/images/original.jpg" alt="Rock, Paper, Scissors, Lizard, Spock icon">
         </span>
         <span class="image2">
-            <img class="computerimage" src="assets/images/original.jpg" alt="Rock, Paper, Scissors, Lizard, Spock icon">
+            <img id="computerimage" src="assets/images/original.jpg" alt="Rock, Paper, Scissors, Lizard, Spock icon">
         </span>
     </div>
     <div class="result">
