Rescripted Javascript to display image of user and computer selections

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <H1>Rock, Paper, Scissors, Lizard, Spock!</H1>
     </div>
     <div class="options">
-        <button id="r">Rock</button>
-        <button id="p">Paper</button>
-        <button id="s">Scissors</button>
-        <button id="l">Lizard</button>
-        <button id="k">Spock</button>
+        <button aria-label="Rock" data-choice="0" class="control">Rock</button>
+        <button aria-label="Paper" data-choice="1" class="control">Paper</button>
+        <button aria-label="Scissors" data-choice="2" class="control">Scissors</button>
+        <button aria-label="Lizard" data-choice="3" class="control">Lizard</button>
+        <button aria-label="Spock" data-choice="4" class="control">Spock</button>
     </div>
     <div class="pictures">
         <span class="image1">
@@ -41,6 +41,6 @@
             Computer's Score <span id="incorrect">0</span>
         </p>
     </div>
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/script2.js"></script>
 </body>
 </html>
